--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon app.js",
     "start": "node app.js",
     "load-data": "node ./utils/loadData.js",
-    "z": "nodemon ./utils/pokedexSearch.js",
+    "z": "nodemon test.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
